# venue

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
booking/: admin.py  context_processors.py  decorators.py  forms.py  middleware.py  models.py  svg_icons.py  urls.py  urls_admin.py  views.py
booking/decorators/: __init__.py  admin_decorators.py
booking/migrations/: 0001_initial.py  0002_userprofile.py  0003_payment.py  0004_notification.py  0005_alter_booking_status.py
booking/models/: __init__.py  booking.py  category.py  notification.py  payment.py  time_slot.py  user_profile.py  venue.py  venue_manager.py
booking/templatetags/: svg_tags.py  user_tags.py
booking/utils/: __init__.py  email_utils.py  notification_utils.py  report_utils.py
booking/views/: __init__.py  admin_views.py  auth_views.py  booking_views.py  home.py  htmx_views.py  manager_views.py  notification_views.py  payment_views.py  user_views.py  venue_views.py
templates/: base.html  logout_form.html
templates/admin/: base_admin_fullpage.html  dashboard.html  user_detail.html  user_edit.html  users.html  venue_detail.html  venue_edit.html  venues.html
templates/auth/: login.html  register.html
templates/booking/: book_venue.html  booking_detail.html  edit_profile.html  home.html  my_bookings.html  my_bookings_fullpage.html  my_profile.html  notification_detail.html  notifications.html  payment_detail.html  payment_form.html  payment_history.html  user_dashboard.html  venue_detail.html  venue_list.html
venue/: asgi.py  settings.py  urls.py  wsgi.py
(+46 files in other folders)
